2.5.0 (17-06-2024)
- Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]

2.4.0 (07-05-2024)
- Refactor: Uses ResolverUtil to locate webservice clients [#qubIT-Omnis-5817]
- Refactor: Removes spring related classes [#qubIT-Omnis-5818]

2.3.0 (25-03-2024)
- Refactor: Removing commons-net dependency [#qubIT-Fenix-5090]

2.2.0 (13-12-2023)
- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]

2.1.2 (05-07-2023)
- Bug fix: Correctly handling SSL termination

2.1.1 (03-03-2022)
- Bug fix: Remove RC module version dependency

2.1.0 (09-03-2020)
- Support for Java 11