@@ -1,3 +1,5 @@
+- Improvement: Explicitly sets cipher provider [#qubIT-Omnis-6262]
+
 2.5.0 (17-06-2024)
 - Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]
 
